# pydentity-core-sqlalchemy

./: pyproject.toml  readme.md
docs/: conf.py  index.rst  models.rst  requirements.txt  stores.rst
example/: main.py  model.py
pydentity_db/: fields.py  models.py
pydentity_db/base/: abstract.py  model.py
pydentity_db/stores/: role_store.py  user_store.py
pydentity_db_sqlalchemy/: __init__.py  db_context.py  fields.py  models.py  types.py
pydentity_db_sqlalchemy/models/: __init__.py  abstract.py  fields.py
pydentity_db_sqlalchemy/stores/: __init__.py  role_store.py  user_store.py
tests/: conftest.py  test_role_store.py  test_user_store.py
